force-app/main/default/objects/Parts_Order_Line_Item__c/Parts_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Parts Order Line Item</label>
    <nameField>
        <label>Parts Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>