force-app/main/default/objects/Parts_Order_Line_Item__c/fields/AMOSConfirmPartNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSConfirmPartNo__c</fullName>
    <label>AMOSConfirmPartNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>