force-app/main/default/objects/Parts_Order_Line_Item__c/fields/AMOSConfirmQty__c.field-meta.xml
<CustomField>
    <fullName>AMOSConfirmQty__c</fullName>
    <label>AMOSConfirmQty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>