force-app/main/default/objects/Parts_Order_Line_Item__c/fields/AMOSDelAcceptYn__c.field-meta.xml
<CustomField>
    <fullName>AMOSDelAcceptYn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMOSDelAcceptYn</label>
    <type>Checkbox</type>
</CustomField>