force-app/main/default/objects/Parts_Order_Line_Item__c/fields/AMOSDiscountCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSDiscountCode__c</fullName>
    <label>AMOSDiscountCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>