force-app/main/default/objects/Parts_Order_Line_Item__c/fields/AMOSOrderNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSOrderNo__c</fullName>
    <label>AMOSOrderNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>