force-app/main/default/objects/Parts_Order_Line_Item__c/fields/CancelCode__c.field-meta.xml
<CustomField>
    <fullName>CancelCode__c</fullName>
    <label>CancelCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>