force-app/main/default/objects/Parts_Order_Line_Item__c/fields/CancelDescription__c.field-meta.xml
<CustomField>
    <fullName>CancelDescription__c</fullName>
    <label>CancelDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>