force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Confirmed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Amount__c</fullName>
    <label>Confirmed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>