force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Confirmed_Price__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Price__c</fullName>
    <label>Confirmed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>