force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Confirmed_Product__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts Order Line Item (Confirmed Product)</relationshipLabel>
    <relationshipName>Parts_Order_Line_Item1</relationshipName>
    <type>Lookup</type>
</CustomField>