force-app/main/default/objects/Parts_Order_Line_Item__c/fields/DistributeCode__c.field-meta.xml
<CustomField>
    <fullName>DistributeCode__c</fullName>
    <label>DistributeCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>