force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Free_Home_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Free_Home_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Home Delivery</label>
    <type>Checkbox</type>
</CustomField>