force-app/main/default/objects/Parts_Order_Line_Item__c/fields/FreeHomeDelivery__c.field-meta.xml
<CustomField>
    <fullName>FreeHomeDelivery__c</fullName>
    <label>FreeHomeDelivery</label>
    <length>1</length>
    <type>Text</type>
</CustomField>