force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Order_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_No__c</fullName>
    <label>Order Line No</label>
    <length>4</length>
    <type>Text</type>
</CustomField>