force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Ordered_Product__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts Order Line Item</relationshipLabel>
    <relationshipName>Parts_Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>