force-app/main/default/objects/Parts_Order_Line_Item__c/fields/OrderedProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderedProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts Order Line Item</relationshipLabel>
    <relationshipName>Parts_Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>