force-app/main/default/objects/Parts_Order_Line_Item__c/fields/OrderLineNo__c.field-meta.xml
<CustomField>
    <fullName>OrderLineNo__c</fullName>
    <label>OrderLineNo</label>
    <length>4</length>
    <type>Text</type>
</CustomField>