force-app/main/default/objects/Parts_Order_Line_Item__c/fields/OrderLineNoCXP__c.field-meta.xml
<CustomField>
    <fullName>OrderLineNoCXP__c</fullName>
    <label>OrderLineNoCXP</label>
    <length>4</length>
    <type>Text</type>
</CustomField>