force-app/main/default/objects/Parts_Order_Line_Item__c/fields/OrderNumberCXP__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberCXP__c</fullName>
    <label>OrderNumberCXP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>