force-app/main/default/objects/Parts_Order_Line_Item__c/fields/OrderPartNo__c.field-meta.xml
<CustomField>
    <fullName>OrderPartNo__c</fullName>
    <label>OrderPartNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>