force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order__c</fullName>
    <label>Parts Order</label>
    <referenceTo>Parts_Order__c</referenceTo>
    <relationshipLabel>Parts Order Line Item</relationshipLabel>
    <relationshipName>Parts_Order_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>