force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Parts_Order_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Line_Item_Number__c</fullName>
    <displayFormat>POLI-{00000}</displayFormat>
    <label>Parts Order Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>