force-app/main/default/objects/Parts_Order_Line_Item__c/fields/ProductRequestLineItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductRequestLineItemNumber__c</fullName>
    <label>ProductRequestLineItemNumber</label>
    <length>4</length>
    <type>Text</type>
</CustomField>