force-app/main/default/objects/Parts_Order_Line_Item__c/fields/Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested__c</fullName>
    <label>Quantity Requested</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>