force-app/main/default/objects/Parts_Order_Line_Item__c/fields/QuantityRequested__c.field-meta.xml
<CustomField>
    <fullName>QuantityRequested__c</fullName>
    <label>QuantityRequested</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>