force-app/main/default/objects/Parts_Order_Line_Item__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>